// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyAccountForm Component should match the snapshot 1`] = `
<div>
  <form>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        type="style-1"
      >
        Typography Component
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-5 ReduxForm-dateOfBirth-1 ReduxForm-dateOfBirth-2"
    >
      <span>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
          data-testid="input-dateofbirth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
            for="input-dateOfBirth"
          >
            Date of Birth
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            label="Date of Birth"
          >
            <input
              aria-describedby="helptext-dateOfBirth"
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              disabled="disabled"
              id="input-dateOfBirth"
              name="dateOfBirth"
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <button
                aria-describedby="helptext-dateOfBirth"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    style="width: 1.125rem; height: 1.125rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 1.33333V0H18.4V1.33333H5.6V0H4V1.33333H0V24H18.9333L24 18.9333V1.33333H20ZM18.9333 21.7373V18.9333H21.7373L18.9333 21.7373ZM22.4 17.3333H17.3333V22.4H1.6V8H22.4V17.3333ZM22.4 6.4H1.6V2.93333H4V4.66667H5.6V2.93333H18.4V4.66667H20V2.93333H22.4V6.4ZM11.7333 13.372V20H13.3333V10.628L9.33733 12.8893L10.1253 14.2827L11.7333 13.372Z"
                      fill="#333333"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-92 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-93"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            aria-live="polite"
          />
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-113"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-verify-dob"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Verify
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`VerifyAccountForm Component should match the snapshot for first time user 1`] = `
<div>
  <form>
    <div
      class="MuiBox-root MuiBox-root-155"
    >
      <div
        type="style-1"
      >
        Typography Component
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-156 ReduxForm-dateOfBirth-152 ReduxForm-dateOfBirth-153"
    >
      <span>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
          data-testid="input-dateofbirth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
            for="input-dateOfBirth"
          >
            Date of Birth
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            label="Date of Birth"
          >
            <input
              aria-describedby="helptext-dateOfBirth"
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              disabled="disabled"
              id="input-dateOfBirth"
              name="dateOfBirth"
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <button
                aria-describedby="helptext-dateOfBirth"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    style="width: 1.125rem; height: 1.125rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 1.33333V0H18.4V1.33333H5.6V0H4V1.33333H0V24H18.9333L24 18.9333V1.33333H20ZM18.9333 21.7373V18.9333H21.7373L18.9333 21.7373ZM22.4 17.3333H17.3333V22.4H1.6V8H22.4V17.3333ZM22.4 6.4H1.6V2.93333H4V4.66667H5.6V2.93333H18.4V4.66667H20V2.93333H22.4V6.4ZM11.7333 13.372V20H13.3333V10.628L9.33733 12.8893L10.1253 14.2827L11.7333 13.372Z"
                      fill="#333333"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-243 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-244"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            aria-live="polite"
          />
        </div>
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-264"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-verify-dob"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Verify
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
